Logout, Elezione Admin, ShowUtenti, ShowOrdini

--- a/Project/src/main/webapp/css/display.css
+++ b/Project/src/main/webapp/css/display.css
@@ -6,3 +6,119 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+body{
+	overflow-x: hidden;
+}
+
+.container{
+	max-width: 95%;
+	margin: 0 auto;
+}
+
+.container > h1{
+	padding:20px 0;
+}
+
+.card{
+	display: flex;
+}
+
+.products{
+	flex: 0.75;
+}
+
+.product{
+	display: flex;
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+	border: 1px solid silver;
+	margin-bottom: 20px;
+}
+
+.product:hover{
+	border: none;
+	box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+	transform: scale(1.01);
+}
+
+.product > img{
+	max-width: 200px;
+	max-height: 300px;
+	object-fit: cover;
+}
+
+.product > img:hover{
+	transform: scale(1.04);
+}
+
+.product-info{
+	padding: 20px;
+	width: 100%;
+	position:relative;
+}
+
+.product-price{
+	margin-bottom: 20px
+}
+
+.product-remove{
+    padding: 10px 25px;
+    max-width:210px;
+    display:flex;
+    justify-content:center;
+    background-color: #0e4950;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.product-remove:hover{
+    background-color: white;
+    color: #0e4950;
+    font-weight: 600;
+    border: 1px solid #0e4950;
+}
+
+.product-quantity > input{
+	width: 40px;
+	padding: 5px;
+	text-align: center;
+}
+
+i{
+	margin-right: 10px;
+}
+
+.cart-total{
+	flex: 0.25;
+	margin-left: 20px;
+	padding: 20px;
+	height: 240px;
+	border: 1px solid silver;
+	border-radius: 10px;
+}
+
+.cart-total p{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+	font-size: 20px;
+}
+
+.cart-total a{
+	display: block;
+	text-align: center;
+	height: 40px;
+	line-height: 40px;
+	background-color: #1e7682;
+	color:white;
+	text-decoration: none;
+}
+
+.cart-total a:hover{
+	background-color: #0e4950;
+}
