--- a/Project/src/main/webapp/css/search.css
+++ b/Project/src/main/webapp/css/search.css
@@ -1,4 +1,9 @@
-@charset "ISO-8859-1";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+::selection{
+	color: #fff;
+	background: rgb(14, 73, 80);
+}
 
 .wrapper{
 	max-width: 100px;
@@ -25,6 +30,10 @@
 	font-size: 18px;
 }
 
+.search-input.active input{
+    border-radius: 5px 5px 0 0;
+}
+
 .search-input .autocom-box{
     padding: 0;
     opacity: 0;
@@ -32,7 +41,34 @@
     max-height: 280px;
     overflow-y: auto;
 }
+.search-input.active .autocom-box{
+    padding: 10px 8px;
+    opacity: 1;
+    pointer-events: auto;
+    position: relative;
+    z-index: 99!important;
+    background-color: rgba(255,255,255,0.9);
+    max-height: 200px;
+}
 
+.autocom-box li{
+    list-style: none;
+    padding: 8px 12px;
+    display: none;
+    width: 100%;
+    cursor: default;
+    border-radius: 3px;
+}
+
+.search-input.active .autocom-box li{
+    display: block;
+    position: relative;
+    z-index: 99!important;
+}
+
+.autocom-box li:hover{
+    background: #efefef;
+}
 
 .search-input .icon{
     position: absolute;
