--- a/Project/src/main/webapp/css/header.css
+++ b/Project/src/main/webapp/css/header.css
@@ -55,7 +55,9 @@ nav .nav-items li a:hover{
     color: #1e7682;
 }
 
-nav .menu-icon{
+nav .menu-icon,
+nav .cancel-icon,
+nav .search-icon{
 	width: 40px;
 	text-align: center;
 	margin: 0 50px;
@@ -72,3 +74,76 @@ nav .menu-icon span{
 i{
 	margin:0px!important
 }
+
+@media (max-width: 1100px){
+	nav{
+		padding: 0px;
+	}
+	
+	nav .logo{
+		text-align: center;
+	}
+	
+	nav .nav-items{
+		position: fixed;
+		z-index: 99;
+		top: 70px;
+		width: 100%;
+		left: -100%;
+		height: 100%;
+		padding: 10px 50px 0 50px;
+		text-align: center;
+		background: #111;
+		display: inline-block;
+		transition: left 0.3s ease;
+	}
+	
+	nav .nav-items.active{
+		left: 0px;
+	}
+	
+	nav .nav-items li{
+        line-height: 40px;
+        margin: 30px 0;
+        float: unset;
+    }
+    nav .nav-items li a{
+        font-size: 20px;
+    }
+
+    nav .menu-icon{
+        display: block;
+    }
+    nav .menu-icon span{
+        display: block;
+    }
+    nav .menu-icon span.hide{
+        display: none;
+    }
+    nav .cancel-icon.show{
+        display: block;
+    }
+}
+
+@media (max-width: 980px){
+    nav .menu-icon,
+    nav .cancel-icon{
+        margin: 0 20px;
+    }
+    nav form{
+        right: 30px;
+        z-index: 99;
+    }
+}
+@media (max-width: 383px){
+    nav .menu-icon,
+    nav .cancel-icon{
+        margin: 0 10px;
+        font-size: 16px;
+    }
+
+    nav .logo img{
+        display: none;
+    }
+}
+
